
[package]
name = "handshaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bytemuck = {version = "1.13.1", features =[ "derive"]}
chrono = "0.4.26"
nanoid = "0.4.0"
rand = "0.8.5"
serde = {version = "1.0.185", features = ["derive", "serde_derive"]}
serde_json = "1.0.105"
sha2 = "0.10.7"
thiserror = "1.0.47"
typed-builder = "0.16.0"
